# shanoir_downloader

./: .env.example  .gitignore  README.md  Readme.md  analyze_shanoir_db.py  anima_utils.py  anonymization_fields.tsv  convert_dicoms_to_niftis.py  create_previews.py  delete_datasets.py  delete_exams.py  delete_subjects.py  environment.yml  example_input.csv  example_input_check.csv  example_input_minimal.csv  execution_template.json  generateExecutions.py  pyproject.toml  requirements.txt  s2b_example_config.json  s2b_example_config_EMISEP_long.json  shanoir2bids.py  shanoir2bids_heudiconv.py  shanoir2bids_long.py  shanoir2bidsv1.py  shanoir_downloader.py  shanoir_downloader_check.py  shanoir_execution.py  shanoir_util.py
.github/workflows/: conda-installation.yml  pip-installation.yml  python-installation.yml
docs/: conf.py  shanoir-bids-datalad.md
